# coursework-hse-2-course

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  launch.bat  learning_gl.cpp  meson.build
.github/workflows/: ci.yml
sources/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  aerodyn.cpp  aerodyn.hpp  camera.cpp  camera.hpp  constants.hpp  course_work.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  rigidbody.cpp  rigidbody.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp  vertex.hpp
static/models/lowpoly_airplane/: scene.gltf
static/shaders/: shader.fs  shader.vs
subprojects/: glad.wrap  stb_image.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
